<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/white"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".RestaurantGetInfoActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ExtraText">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/amarante"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/restuarant"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="50sp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </de.hdodenhof.circleimageview.CircleImageView>

    <Button
        android:id="@+id/uploadimg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minWidth="32dp"
        android:text="@string/select_image"
        android:minHeight="48dp"
        ></Button>

    <EditText
        android:id="@+id/Res_Name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_restuarant_name"
        android:inputType="textLongMessage"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade"
        tools:ignore="InvalidId" />


    <EditText
        android:id="@+id/Res_Open_Time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_opening_time"
        android:inputType="time"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade" />

    <EditText
        android:id="@+id/Res_Close_Time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_closing_time"
        android:inputType="time"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade" />

    <EditText
        android:id="@+id/Res_State"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_state"
        android:inputType="textLongMessage"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade" />

    <EditText
        android:id="@+id/Res_district"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_district"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade" />

    <EditText
        android:id="@+id/Res_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_city"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade" />

    <EditText
        android:id="@+id/Res_Address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_bg"
        android:gravity="center"
        android:hint="@string/enter_address"
        android:inputType="textLongMessage"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/blackshade" />

    <Button
        android:id="@+id/Add_Details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttondefault_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/submit" />
    <Button
        android:id="@+id/cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttondefault_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancel" />
</LinearLayout>

</ScrollView>