<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    tools:context=".Fragment.Restaurant.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/amarante"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/restuarant"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:hint="@string/enter_description"
            android:inputType="textLongMessage"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackshade"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/noofdish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:hint="@string/no_of_dish"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackshade"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/pickupadd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:hint="@string/enter_pickup_address"
            android:inputType="textLongMessage"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackshade" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:hint="@string/enter_note"
            android:inputType="textLongMessage"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/blackshade" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:id="@+id/veg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:checked="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/veg"
                android:textColor="@color/black"
                android:textColorHint="@color/blackshade"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/nonveg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nonveg"
                android:textColor="@color/black"
                android:textColorHint="@color/blackshade"
                android:textSize="20sp" />

        </RadioGroup>


        <Button
            android:id="@+id/addbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_food" />
    </LinearLayout>
</ScrollView>