<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:context=".RestuarantLoginFragment">
    <EditText
        android:id="@+id/userId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:gravity="center"
        android:textColorHint="@color/green"
        android:textColor="@color/black"
        android:inputType="phone"
        android:minHeight="48dp"
        android:background="@drawable/input_bg"
        android:padding="10dp"
        android:hint="@string/mobile_number" />

    <EditText
        android:id="@+id/userpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:ems="10"
        android:gravity="center"
        android:textColorHint="@color/green"
        android:background="@drawable/input_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingRight="20dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/buttondefault_bg"
        android:padding="10dp"
        android:text="Log in" >

    </Button>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:visibility="gone">

    </ProgressBar>

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_in"
        android:textStyle="bold"
        android:textColor="@color/primary" />
    <ImageView
        android:id="@+id/adminlogin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:src="@drawable/logo"></ImageView>
</LinearLayout>